<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/idChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_filla"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/lblResultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/introdueix_resultat"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtResultat"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/escriu_aqui"
        android:inputType="text" />

    <Button
        android:id="@+id/btnReturnResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retornar_resultat"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"/>

</LinearLayout>

