<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/activity_principal"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLlençarChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/llan_ar_activity_filla"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/lblResultats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/resultats"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@android:drawable/edit_text"
        android:padding="8dp">

        <TextView
            android:id="@+id/resultats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp" />
    </ScrollView>

</LinearLayout>

